# MLOps_GitHubActions_and_CML_CI-CD

./: .gitignore  Churn_Modelling.csv  README.md  pyproject.toml  train.py
.github/workflows/: main.yml
